k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: hello
  app.kubernetes.io/instance: hello
  name: hello
  namespace: hello
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: hello
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
